
	* common/src/ipmi-ping.h, common/src/ipmi-ping.c: Pass destination
	to create and parse functions.

	* ipmiping/, rmcpping/: Prefix debug output appropriately.

	* common/src/debug-common.h, common/src/debug-common.c: New files.

	* ipmipower/, ipmiping/, rmcpping/, bmc-watchdog/, ipmiconsole/,
	libfreeipmi/: Use debug common functions to generate consistent
	headers for all tools.
	
2008-04-16  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/, rmcpping/src/, ipmiping/src/, ipmipower/src/,
	ipmiconsole/src/libipmiconsole/: Make debug dump output consistent
	to other tools by calling ipmi_cmd_str appropriately, outputing
	"request" vs "response", "ipmi 1.5" vs. "ipmi 2.0", output w/
	headers, etc.

	* libfreeipmi/src/api: Store hostname to ctx.
	
2008-04-15  Albert Chu <chu11@llnl.gov>
	
	* General documentation manpage audit/updates.

2008-04-14  Albert Chu <chu11@llnl.gov>

	* General documentation manpage audit/updates.

	* Minor code cleanup through.
	
2008-04-11  Albert Chu <chu11@llnl.gov>

	* ipmidetect/src/ipmidetectd/hash.h,
	ipmidetect/src/ipmidetectd/hash.c,
	ipmidetect/src/ipmidetectd/thread.h,
	ipmidetect/src/ipmidetectd/thread.c: Move to common/src and into
	the miscutils library.

	* ipmidetect/src/ipmidetectd/Makefile.am, common/src/Makefile.am:
	Update appropriately.

	* ipmidetect/src/ipmidetect, ipmidetect/src/ipmidetectd/,
	ipmiconsole/src/ipmiconsole: Move common error.h and error.c into
	common/src.

	* ipmidetect/src/ipmidetectd/Makefile.am,
	ipmidetect/src/ipmidetect/Makefile.am,
	ipmiconsole/src/ipmiconsole/Makefile.am, common/src/Makefile.am:
	Adjust appropriately.

	* ipmipower/src/error.h, ipmipower/src/error.c: Rename to ierror.h
	and ierror.c to differentiate itself from the common error.h and
	error.c.  Adjust all function names accordingly.
	
2008-04-10  Albert Chu <chu11@llnl.gov>

	* README, doc/freeipmi.7.pre.in: Add info on libraries.

	* General documentation manpage audit/updates.
	
2008-04-09  Albert Chu <chu11@llnl.gov>
