@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower_cipher_suite_id.c,v 1.7 2008-03-28 00:14:46 chu11 Exp $
+ *  $Id: ipmipower_cipher_suite_id.c,v 1.8 2008-04-17 23:14:28 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -109,7 +109,7 @@ ipmipower_cipher_suite_id_string(cipher_suite_id_t id)
       return "12";
       break;
     default:
-      err_exit("ipmipower_cipher_suite_id_string: Invalid cipher_suite_id: %d\n", id);
+      ierr_exit("ipmipower_cipher_suite_id_string: Invalid cipher_suite_id: %d\n", id);
     }
   
   return NULL;                  /* NOT_REACHED */
@@ -153,7 +153,7 @@ ipmipower_cipher_suite_id_description(cipher_suite_id_t id)
       return "Authentication Algorithm = HMAC-MD5; Integrity Algorithm = MD5-128; Confidentiality Algorithm = AES-CBC-128";
       break;
     default:
-      err_exit("ipmipower_cipher_suite_id_description: Invalid cipher_suite_id: %d\n", id);
+      ierr_exit("ipmipower_cipher_suite_id_description: Invalid cipher_suite_id: %d\n", id);
     }
   
   return NULL;                  /* NOT_REACHED */
@@ -201,7 +201,7 @@ ipmipower_ipmi_cipher_suite_id(cipher_suite_id_t id)
       return 12;
       break;
     default:
-      err_exit("ipmipower_ipmi_cipher_suite_id: Invalid cipher_suite_id: %d\n", id);
+      ierr_exit("ipmipower_ipmi_cipher_suite_id: Invalid cipher_suite_id: %d\n", id);
     }
   
   return 0;                  /* NOT_REACHED */
