@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower_prompt.c,v 1.60 2008-04-12 00:05:23 chu11 Exp $
+ *  $Id: ipmipower_prompt.c,v 1.61 2008-04-17 23:14:29 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -801,7 +801,7 @@ _readcmd(char *buf, int maxlen)
   if (len == bytes_peeked)
     return;
   if ((dropped = cbuf_drop(ttyin, ++len)) != len)
-    err_output("warning: _readcmd: cbuf_drop returned %d (!= %d)", dropped, len);
+    ierr_output("warning: _readcmd: cbuf_drop returned %d (!= %d)", dropped, len);
 }
 
 int 
